# HybridBCI-For-robot-s-navigation

./: .gitignore  Makefile  README.md  ReadMe.md  Readme
1-BCIcmdSim/: Makefile
cnbi_wtkapp_bin_hybrid/: Makefile  Makefile.am  Makefile.in  hybrid_p300_processing  hybrid_p300_processing.cpp  hybrid_smr_processing  hybrid_smr_processing.cpp  p300_utilities.hpp  smr-2class_utilities.hpp
cnbi_wtkapp_bin_hybrid/.deps/: hybrid_p300_processing.Po  hybrid_smr_processing.Po
cnbi_wtkapp_bin_hybrid/.libs/: hybrid_p300_processing  hybrid_smr_processing
hybrid_bci/: CMakeLists.txt  ReadMe.md  package.xml  start.sh
hybrid_bci/bagfiles/: command_2019-09-09-10-51-01.bag  command_2019-09-09-10-52-59.bag  command_2019-09-09-10-53-49.bag  command_2019-09-09-10-55-41.bag  command_2019-09-09-11-03-42.bag  command_2019-09-09-11-21-42.bag  command_2019-09-09-15-59-24.bag  distribution_2019-09-09-10-51-01.bag  distribution_2019-09-09-10-52-59.bag  distribution_2019-09-09-10-53-49.bag  distribution_2019-09-09-10-55-41.bag  distribution_2019-09-09-11-03-42.bag  distribution_2019-09-09-11-05-48.bag  distribution_2019-09-09-11-21-42.bag  distribution_2019-09-09-15-59-24.bag  robot_2019-09-09-10-52-59.bag  robot_2019-09-09-10-55-41.bag  robot_2019-09-09-11-03-42.bag  robot_2019-09-09-11-05-48.bag  robot_2019-09-09-11-21-42.bag
hybrid_bci/bagfiles/all/test1/: command_2019-09-17-21-33-24.bag  distribution_2019-09-17-21-33-24.bag
hybrid_bci/bagfiles/all/test10/: command_2019-09-20-00-09-32.bag  distribution_2019-09-20-00-09-32.bag
hybrid_bci/bagfiles/all/test2/: command_2019-09-17-21-48-45.bag  distribution_2019-09-17-21-48-45.bag
hybrid_bci/bagfiles/all/test3/: command_2019-09-17-22-18-30.bag  distribution_2019-09-17-22-18-30.bag
hybrid_bci/bagfiles/all/test4/: command_2019-09-17-22-30-06.bag  distribution_2019-09-17-22-30-06.bag
hybrid_bci/bagfiles/all/test5/: command_2019-09-18-22-52-24.bag  distribution_2019-09-18-22-52-24.bag
hybrid_bci/bagfiles/all/test6/: command_2019-09-18-23-06-10.bag  distribution_2019-09-18-23-06-10.bag
hybrid_bci/bagfiles/all/test7/: command_2019-09-18-23-16-31.bag  distribution_2019-09-18-23-16-31.bag
hybrid_bci/bagfiles/all/test8/: command_2019-09-19-23-53-00.bag  distribution_2019-09-19-23-53-00.bag
hybrid_bci/bagfiles/all/test9/: command_2019-09-20-00-02-09.bag  distribution_2019-09-20-00-02-09.bag
hybrid_bci/bagfiles/only mi/old/test1_slow/: command_2019-09-13-17-35-20.bag  distribution_2019-09-13-17-35-20.bag
hybrid_bci/bagfiles/only mi/test1/: command_2019-09-08-10-58-51.bag  command_2019-09-14-11-32-05.bag  distribution_2019-09-08-10-58-51.bag  distribution_2019-09-14-11-32-05.bag
hybrid_bci/bagfiles/only mi/test10/: command_2019-09-14-15-34-38.bag  distribution_2019-09-14-15-34-38.bag
hybrid_bci/bagfiles/only mi/test2/: command_2019-09-14-16-52-22.bag  distribution_2019-09-14-16-52-22.bag
hybrid_bci/bagfiles/only mi/test3/: command_2019-09-14-15-44-31.bag  distribution_2019-09-14-16-19-49.bag
hybrid_bci/bagfiles/only mi/test4/: command_2019-09-14-16-19-49.bag  distribution_2019-09-14-15-53-32.bag
hybrid_bci/bagfiles/only mi/test5/: command_2019-09-14-16-29-12.bag  distribution_2019-09-14-15-25-10.bag
hybrid_bci/bagfiles/only mi/test6/: command_2019-09-14-15-53-32.bag  distribution_2019-09-14-15-44-31.bag
hybrid_bci/bagfiles/only mi/test7/: command_2019-09-14-15-25-10.bag  distribution_2019-09-14-17-04-25.bag
hybrid_bci/bagfiles/only mi/test8/: command_2019-09-14-17-04-25.bag  distribution_2019-09-14-16-29-12.bag
hybrid_bci/bagfiles/only mi/test9/: command_2019-09-14-15-14-11.bag  distribution_2019-09-14-15-14-11.bag
hybrid_bci/cfg/: Parameters.cfg
hybrid_bci/launch/: face_detector.launch  hybrid_system.launch  keyboard_teleop.launch  roshybridBCI.launch  simulation_world.launch
hybrid_bci/msg/: ClassificationResult.msg  P300.msg  P300_person.msg  P300_roi.msg  direction_distribution.msg  motorimagery.msg  person_roi.msg
hybrid_bci/src/: cmd_simu.cpp  hybrid_bci.cpp  mi_handler.cpp  move_bci.cpp  p300_handler.cpp  parameters.h  send_p300.cpp  view_dist.cpp  viewer.cpp
hybrid_bci/srv/: ClassifyAll.srv  RegisterFace.srv
hybrid_bci/worlds/: full_test_world.world  test_mi_world.world  test_p300_world.world  test_world.world
(+57 files in other folders)
